--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -93,6 +93,28 @@ To access the details page, click the **Compute resources** tab, then click the 
     *   **Max channels per pulse gate** - The maximum number of channels you can refer to within a pulse schedule. Typically each qubit is associated with a drive channel, a measure channel, an acquisition channel, and then auxiliary control channels for things like cross resonance.
     *   **Usage** - Click the link to see the jobs that you have run on this QPU.
 
+## Qubit properties
+
+Each qubit on a QPU has specific properties that characterize its performance and behavior:
+
+- **T1**: The longitudinal relaxation time, representing how long it takes (in seconds) for a qubit to decay from the |1⟩ state to the |0⟩ state.
+- **T2**: The transverse relaxation time, representing how long (in seconds) quantum phase information is preserved.
+- **Readout error**: The average probability of a measurement error for the qubit, calculated as:  
+  `(prob_meas1_prep0 + prob_meas0_prep1)/2`
+- **prob_meas0_prep1**: The probability of measuring `0` when the qubit was intended to be prepared in the |1⟩ state (P(0|1)).
+- **prob_meas1_prep0**: The probability of measuring `1` when the qubit was intended to be prepared in the |0⟩ state (P(1|0)).
+- **Readout length**: The duration of the measurement operation, from when the measurement pulse starts until the system is ready for another measurement.
+
+<Admonition type="note" title="Measurement errors">
+These measurement probabilities (`prob_meas0_prep1` and `prob_meas1_prep0`) represent what are known as SPAM errors (State Preparation And Measurement). While they primarily reflect measurement errors in IBM Quantum systems, they may include small contributions from imperfect state preparation.
+</Admonition>
+
+<Admonition type="tip">
+You can access these properties programmatically using:
+```python
+backend.properties().qubit_property(qubit_index)
+```
+
 ## View your resources
 <LegacyContent>
 To find your available QPUs, open the [Compute resources](https://quantum.ibm.com/services/resources) page.  Click a QPU to view its details.
