--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f9611008-cae5-451b-98a8-a59ae281b33e",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        " <IBMBackend('ibm_torino')>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "89d7a8c6-05e8-4ef8-8e50-bc5ead67a436",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "<IBMBackend('ibm_torino')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,6 @@
     "\n",
     "Backends can also have properties that change whenever the backed is calibrated, such as qubit frequency and operation error rates. Backends are usually calibrated every 24 hours, and their properties update after the calibration sequence completes. These properties can be used when optimizing quantum circuits or to construct noise models for a classical simulator.\n",
     "\n",
-    "\n",
     "### Qubit properties\n",
     "\n",
     "The `backend.qubit_properties` method returns information about the qubits' physical attributes. This includes the qubit frequency in GHz and decay times (`t1` and `t2`) in µs."
@@ -288,6 +287,86 @@
    "id": "1d3002ef-e196-4d02-b0d7-b84d1a75ce30",
    "metadata": {},
    "source": [
+    "### Measurement properties\n",
+    "\n",
+    "The `backend.properties()` method provides additional measurement-related properties for each qubit:\n",
+    "\n",
+    "- `readout_error`: The average probability of a measurement error for the qubit, calculated as (prob_meas1_prep0 + prob_meas0_prep1)/2.\n",
+    "- `prob_meas0_prep1`: The probability of measuring 0 when the qubit was intended to be prepared in the |1⟩ state (P(0|1)).\n",
+    "- `prob_meas1_prep0`: The probability of measuring 1 when the qubit was intended to be prepared in the |0⟩ state (P(1|0)).\n",
+    "- `readout_length`: The total duration (in seconds) of the measurement operation, from when the measurement pulse begins until the system is ready for another measurement.\n",
+    "\n",
+    "These values primarily reflect measurement errors (readout errors), though they may include some contribution from state preparation errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "810d55d0-2f60-4bce-a1c2-254e2b989b90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'T1': (6.322117837611346e-05,\n",
+       "  datetime.datetime(2025, 4, 21, 8, 46, 23, tzinfo=tzlocal())),\n",
+       " 'T2': (5.209639963380763e-05,\n",
+       "  datetime.datetime(2025, 4, 21, 8, 46, 23, tzinfo=tzlocal())),\n",
+       " 'frequency': (4635650381.341646,\n",
+       "  datetime.datetime(2025, 4, 21, 8, 46, 23, tzinfo=tzlocal())),\n",
+       " 'readout_error': (0.0087890625,\n",
+       "  datetime.datetime(2025, 4, 21, 10, 21, 58, tzinfo=tzlocal())),\n",
+       " 'prob_meas0_prep1': (0.01611328125,\n",
+       "  datetime.datetime(2025, 4, 21, 10, 21, 58, tzinfo=tzlocal())),\n",
+       " 'prob_meas1_prep0': (0.00146484375,\n",
+       "  datetime.datetime(2025, 4, 21, 10, 21, 58, tzinfo=tzlocal())),\n",
+       " 'readout_length': (1.56e-06,\n",
+       "  datetime.datetime(2025, 4, 21, 10, 21, 58, tzinfo=tzlocal()))}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all properties for qubit 0\n",
+    "backend.properties().qubit_property(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dc15db13-bf2a-4934-8ef6-cacfb953fde6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measurement properties for qubit 0:\n",
+      "Readout error: 0.0087890625\n",
+      "P(0|1): 0.01611328125\n",
+      "P(1|0): 0.00146484375\n",
+      "Readout duration: 1.56e-06 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print formatted measurement properties\n",
+    "props = backend.properties().qubit_property(0)\n",
+    "print(f\"Measurement properties for qubit 0:\")\n",
+    "print(f\"Readout error: {props['readout_error'][0]}\")\n",
+    "print(f\"P(0|1): {props['prob_meas0_prep1'][0]}\")\n",
+    "print(f\"P(1|0): {props['prob_meas1_prep0'][0]}\")\n",
+    "print(f\"Readout duration: {props['readout_length'][0]} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d304e9f-6e76-4876-bbb2-b6b768f3f9e3",
+   "metadata": {},
+   "source": [
     "### Instruction properties\n",
     "\n",
     "The `backend.target` attribute is a `qiskit.transpiler.Target` object: an object that contains all the information needed to transpile a circuit for that backend. This includes instruction errors and durations. For example, the following cell gets the properties for an [`ecr` gate](/docs/api/qiskit/qiskit.circuit.library.ECRGate) acting between qubits 1 and 0."
@@ -295,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "dc15db13-bf2a-4934-8ef6-cacfb953fde6",
    "metadata": {},
    "outputs": [
@@ -305,42 +384,13 @@
        "InstructionProperties(duration=5.333333333333332e-07, error=0.005851904505383088)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "backend.target[\"ecr\"][(1, 0)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d304e9f-6e76-4876-bbb2-b6b768f3f9e3",
-   "metadata": {},
-   "source": [
-    "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "810d55d0-2f60-4bce-a1c2-254e2b989b90",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "InstructionProperties(duration=1.216e-06, error=0.0107421875)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "backend.target[\"measure\"][(0,)]"
    ]
   },
   {
