--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -371,7 +371,7 @@
       "The result of the submitted job had 1 PUB and has a value:\n",
       " PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(3, 100), dtype=float64>), stds=np.ndarray(<shape=(3, 100), dtype=float64>), ensemble_standard_error=np.ndarray(<shape=(3, 100), dtype=float64>), shape=(3, 100)), metadata={'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32})], metadata={'dynamical_decoupling': {'enable': False, 'sequence_type': 'XX', 'extra_slack_distribution': 'middle', 'scheduling_method': 'alap'}, 'twirling': {'enable_gates': False, 'enable_measure': True, 'num_randomizations': 'auto', 'shots_per_randomization': 'auto', 'interleave_randomizations': True, 'strategy': 'active-accum'}, 'resilience': {'measure_mitigation': True, 'zne_mitigation': False, 'pec_mitigation': False}, 'version': 2})\n",
       "\n",
-      "The associated PubResult of this job has the following DataBins:\n",
+      "The associated PubResult of this job has the following data bins:\n",
       " DataBin(evs=np.ndarray(<shape=(3, 100), dtype=float64>), stds=np.ndarray(<shape=(3, 100), dtype=float64>), ensemble_standard_error=np.ndarray(<shape=(3, 100), dtype=float64>), shape=(3, 100))\n",
       "\n",
       "And this DataBin has attributes: dict_keys(['evs', 'stds', 'ensemble_standard_error'])\n",
@@ -438,7 +438,7 @@
     "    f\"The result of the submitted job had {len(result)} PUB and has a value:\\n {result}\\n\"\n",
     ")\n",
     "print(\n",
-    "    f\"The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n\"\n",
+    "    f\"The associated PubResult of this job has the following data bins:\\n {result[0].data}\\n\"\n",
     ")\n",
     "print(f\"And this DataBin has attributes: {result[0].data.keys()}\")\n",
     "print(\n",
@@ -479,7 +479,7 @@
    "source": [
     "### Sampler output\n",
     "\n",
-    "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray` per `ClassicalRegister` in the circuit.\n",
+    "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The data bins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray` per `ClassicalRegister` in the circuit.\n",
     "\n",
     "The `BitArray` class is a container for ordered shot data. In more detail, it stores the information sampled bitstrings as bytes inside a two-dimensional array. The left-most axis of this array runs over ordered shots, while the right-most axis runs over bytes.\n",
     "\n",
@@ -509,7 +509,7 @@
     "job = sampler.run([transpiled_circuit])\n",
     "result = job.result()\n",
     "\n",
-    "# the databin contains one BitArray\n",
+    "# the data bin contains one BitArray\n",
     "data = result[0].data\n",
     "print(f\"Databin: {data}\\n\")\n",
     "\n",
@@ -577,7 +577,7 @@
     "job = sampler.run([transpiled_circuit])\n",
     "result = job.result()\n",
     "\n",
-    "# the databin contains two BitArrays, one per register, and can be accessed\n",
+    "# the data bin contains two BitArrays, one per register, and can be accessed\n",
     "# as attributes using the registers' names\n",
     "data = result[0].data\n",
     "print(f\"BitArray for register 'alpha': {data.alpha}\")\n",
