move potential legit typos out of cspell

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ac6c306a",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore Biggr */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb3d6f19",
    "metadata": {},
    "source": [
