--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "876fcfc7",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore mapsto */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82c24e96",
    "metadata": {},
    "source": [
