--- a/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bd180f53",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "{/* cspell:ignore operatorname, mapsto */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f98f260",
    "metadata": {},
    "source": [
