--- a/learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "da8d328b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "{/* cspell:ignore Biggr, operatorname */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f30aee8e",
    "metadata": {},
    "source": [
