--- a/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "469e1718",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "{/* cspell:ignore operatorname, mapsto */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ac94919",
    "metadata": {},
    "source": [
