--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8c94f441",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "{/* cspell:ignore operatorname */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9a3de924",
    "metadata": {},
    "source": [
