--- a/learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b494220d",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore Biggr, operatorname */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39d3529f",
    "metadata": {},
    "source": [
