--- a/learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1eb71376",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore operatorname */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3ac1882",
    "metadata": {},
    "source": [
