--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "53347381",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore biggr */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "74bb1dda-e1a2-4782-a356-36fc28700f99",
    "metadata": {},
    "source": [
