--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -11,9 +11,7 @@ This course provides an overview of several approaches to quantum diagonalizatio
 
 This course is intended for individuals who have some experience with quantum computing and want to leverage its power in matrix diagonalization.
 
-Other recommended references include the following:
-
 We recommend that learners complete the following prerequisites prior to this course:
 
-- Set up your local environment by following along with the start and build sections of our documentation page.
-- For deeper understanding of quantum information, try Basics of Quantum Information with John Watrous.
+- Set up your local environment by following along with the [Get started](https://docs.quantum.ibm.com/guides) guide in our documentation page.
+- For deeper understanding of quantum information, try [Basics of Quantum Information](https://quantum.cloud.ibm.com/learning/course/basics-of-quantum-information) with John Watrous.
