--- a/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "# One might use linalg.eigh here, but later matrices may not be hermitean. So we use linalg.eig in this lesson.\n",
+    "# One might use linalg.eigh here, but later matrices may not be Hermitian. So we use linalg.eig in this lesson.\n",
     "\n",
     "import numpy as np\n",
     "\n",
