--- a/learning/courses/quantum-diagonalization-algorithms/qda-3-sqd-overview.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-3-sqd-overview.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Consider an $N \\times N$ matrix, $H$, where the complete vector space (Hilbert space) has a dimension of $N$ ($N$ is large). Next, we select a subspace ($\\mathcal{S}$) - which is a subset of the full Hilbert space - of dimension $M$, where $M$ is sufficiently small. After projecting $H$ onto this subspace, the projected matrix (say, $H_\\mathcal{S}$) will be smaller ($M \\times M$). The smaller $H_\\mathcal{S}$ can be diagonalized using a suitable classical numerical method, and generate eigenvalues and eigenvectors for that subspace.\n",
     "\n",
-    "**Note that, the subspace must be in _support_ of our target (e.g., ground) eigenstate.** In other words, the projected Hamiltonian $H_\\mathcal{S}$ must be in a subspace that includes the lowest eigenvalue."
+    "**Note that the subspace must be in _support_ of our target (e.g., ground) eigenstate.** In other words, the projected Hamiltonian $H_\\mathcal{S}$ must be in a subspace that includes the lowest eigenvalue."
    ]
   },
   {
