--- a/learning/courses/quantum-diagonalization-algorithms/qda-4-sqd-implementation.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-4-sqd-implementation.ipynb
@@ -38,7 +38,7 @@
     "- `ffsim` package to construct the LUCJ ansatz.\n",
     "- `Qiskit` for transpiling the ansatz for hardware execution.\n",
     "- `Qiskit IBM Runtime` to execute the circuit on a QPU and collect samples.\n",
-    "- `Qiskit Addon SQD` configuration recovery and ground state energy estimation using subspace projection and matrix diagonalization."
+    "- `Qiskit addon SQD` configuration recovery and ground state energy estimation using subspace projection and matrix diagonalization."
    ]
   },
   {
