--- a/learning/courses/quantum-diagonalization-algorithms/qda-5-skqd.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-5-skqd.ipynb
@@ -17,10 +17,10 @@
    "source": [
     "This lesson on Sample-based quantum diagonalization (SKQD) combines methods explained in previous methods. It consists of a single example leveraging the Qiskit patterns framework:\n",
     "\n",
-    "Step 1: Map problem to quantum circuits and operators\n",
-    "Step 2: Optimize for target hardware\n",
-    "Step 3: Execute using Qiskit Primitives\n",
-    "Step 4: Post-process\n",
+    "- Step 1: Map problem to quantum circuits and operators\n",
+    "- Step 2: Optimize for target hardware\n",
+    "- Step 3: Execute using Qiskit Primitives\n",
+    "- Step 4: Post-process\n",
     "\n",
     "An important step in the sample-based quantum diagonalization method is to generate quality vectors for the subspace. In the previous lesson, we used the LUCJ ansatz to generate subspace vectors for a chemistry Hamiltonian. In this lesson, we will use quantum Krylov states[\\[1\\]](#references) as was discussed in lesson 2. First, we will review how to create the Krylov space on a quantum computer using time evolution operations. We will then sample from it. We will project the system Hamiltonian onto the sampled subspace and diagonalize it to estimate the ground state energy. The algorithm provably and efficiently converges to the ground state, under the assumptions described in lesson 2.\n",
     "\n",
