Add definitions for prob_meas0_prep1, prob_meas1_prep0, and readout_length

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -345,6 +345,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Additional Qubit Property Definitions\n",
+    "\n",
+    "- **`prob_meas0_prep1`**: Probability of measuring a 0 when a 1 was prepared.\n",
+    "- **`prob_meas1_prep0`**: Probability of measuring a 1 when a 0 was prepared.\n",
+    "- **`readout_length`**: Duration of the measurement pulse used for readout (in seconds).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend = service.backend(\"ibm_fez\")\n",
+    "props = backend.properties().qubit_property(0)\n",
+    "props['prob_meas0_prep1'], props['prob_meas1_prep0'], props['readout_length']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ba1c604-b4b9-498d-ac29-9cb3a9644e09",
    "metadata": {},
    "source": [
