--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -110,6 +110,13 @@ View QPU configuration values by selecting a QPU on the [Quantum processing unit
 View QPU configuration values by selecting a QPU on the [Compute resources](https://quantum.cloud.ibm.com/computers) page. The three tabs in the Calibration data section let you choose how to view the calibration data; the Map view tab is automatically selected.
 </CloudContent>
 
+### Additional Qubit Properties
+
+- `prob_meas0_prep1`: Probability of measuring a 0 when a 1 was prepared. Indicates readout error in detecting excited state.
+- `prob_meas1_prep0`: Probability of measuring a 1 when a 0 was prepared. Indicates readout error in detecting ground state.
+- `readout_length`: Duration of the readout pulse in seconds. Affects circuit duration and timing.
+
+
 ### Expanded card for a sample QPU
 
 ![An expanded card for a sample QPU.](/docs/images/guides/qpu-information/exp-card.avif "Expanded card for a sample QPU")
