--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -27,7 +27,7 @@ There are a few major changes you will see in the updated IBM Quantum Platform:
 
 * For Open Plan users, there is no longer a limit to the number of jobs you can have in the queue.
 * Open Plan users cannot run session jobs.  Previously, if you tried to run a job in a session, it was run in job mode.  Now, if you try to run a job in a session, the job fails.  Instead, Open Plan users should explicitly write their code to run in job or batch mode. See [execution modes](/docs/guides/execution-modes) to learn how to set the execution mode.
-* When activating the service, an instance is required, and the channel must be set to `ibm_cloud` or `ibm_quantum_platform` (The `ibm_cloud` channel will be deprecated and removed in a future release). The instance is specified by using its cloud resource name (CRN).
+* When activating the service, an instance is required, and the channel must be set to `ibm_cloud` or `ibm_quantum_platform`. Both of these two channels point to the new IBM Quantum Platform API but the `ibm_cloud` channel will be deprecated and removed in a future release. The instance is specified by using its cloud resource name (CRN).
 * Quantum computers powered by the state-of-the-art IBM Quantum Heron processor are available through the Open Plan.
 * For IBM Quantum Platform Classic users, the hierarchical authorization structure has changed.  That is, there are no hubs, groups, or projects in the new platform. All user management is done through IBM Cloud [identity and access management (IAM)](https://cloud.ibm.com/docs/account?topic=account-iamoverview). By default, access groups are created for you when you create an instance through the IBM Quantum Platform user interface.
 
@@ -35,7 +35,7 @@ There are a few major changes you will see in the updated IBM Quantum Platform:
 
 _Instances_ are virtual servers that manage your workload execution, including executing quantum programs and classical compute tasks (such as processing error mitigation).  Instances are specified by their Cloud Resource Name (CRN).
 
-You can see the instances you have access to on the dashboard or by clicking the Instances tab from the dashboard. Each instance is listed with its CRN identifier. You can include this identifier when connecting to Qiskit Runtime via the `QiskitRuntimeService` object when using `qiskit-ibm-runtime` in a Python environment. When an instance is passed in, only backends and jobs from the instance passed in will be available. Alternatively, if an instance is not included, then all backends and jobs across all instances in your account will be available. In this case, when a backend is selected, an instance with the backend availble will be selected. 
+You can see the instances you have access to on the dashboard or by clicking the Instances tab from the dashboard. Each instance is listed with its CRN identifier. You can include this identifier when connecting to Qiskit Runtime via the `QiskitRuntimeService` object when using `qiskit-ibm-runtime` in a Python environment. When an instance is passed in, only backends and jobs from the instance passed in will be available. Alternatively, if an instance is not included, then all backends and jobs across all instances in your account will be available. In this case, when a backend is selected, an instance with the backend available will be selected. 
 
 
 ## Available plans
@@ -111,6 +111,16 @@ Follow these steps to start using the new version of IBM Quantum Platform.
       overwrite=True # Only needed if you already have Cloud credentials.
     )
     ```
+   
+   Note that it is no longer required to pass in an instance when saving an account or initializing the `QiskitRuntimeService()`. If an instance is not passed in, all instances will be checked when a backend is retrieved (`service.backend("backend_name")`). If an instance is passed into `save_account()`, or passed in during initialization, it will be used as the default instance when retrieving backends. The instance passed in at initialization will take precedence over the one saved in the account.
+
+      * New parameters, `region`, and `plans_preference`, have been added to the `QiskitRuntimeService()` initializer and the `save_account()` method. These can be used to prioritize certain instances on the new platform (`ibm_quantum_platform`, and temporarily, `ibm_cloud` channels) without explicitly providing the CRN. 
+      `region` allows you to set a region preference (`us-east` or `eu-de`), so if `us-east` is saved, 
+      then only instances from `us-east` will be checked. `plans_preference` takes a list of plans where instances will be prioritized in the order of plans given. For example, `['Open', 'Premium']` would prioritize all Open Plan instances, then all Premium Plan instances, and then the rest.
+      * In addition to the IBM Cloud Resource Name (CRN), the instance name can also be passed in as the instance value.
+      * If you have access to multiple accounts, only one account per API token can be used. The 
+      IBM Cloud API Token is treated as the account identifier and will unlock the resources associated with the account the token was created in. A list of tokens per account can be found on the [API keys](https://cloud.ibm.com/iam/apikeys) page.
+
     Run `exit()` to close the Python shell. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
 
     ```python
